test/CheckError/Templates/IncorrectTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <bool T>
void g() { }

export void f() {
	// CHECK: .loci:9:2: error: template argument has type 'typename_t<int_t>', which doesn't match type 'bool_t' of template variable 'T'
	g<int>();
}

// CHECK: 1 error generated.
